--- a/_posts/project/2017-11-26-bd-dive.markdown
+++ b/_posts/project/2017-11-26-bd-dive.markdown
@@ -10,3 +10,16 @@ image:
 date: 2017-11-26T20:46:16+05:30
 ---
 
+## Background
+
+
+## Concept
+
+
+## Research Questions
+
+
+## Experiment
+
+
+## Publications
